# django-todo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: admin.py  models.py  urls.py
core/api/: __init__.py  permissions.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_todoitem_todo_list.py  0003_rename_user_todolist_owner.py
docker/: Dockerfile  start_django.sh
todo/: .env.template  settings.py  urls.py  utils.py
